* Inode::_GrowStream() did not make the double indirect block writable before   adding a block to its array. This could cause all kinds of trouble, and   fixes at least a part of #2148.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@25125 a95241bf-73f2-0310-859d-f6bbb57e9c96